Overflow fixed on AboutMe Page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,9 @@
+/*------------ ALL PAGES ------------*/
 
 .background{
-    background: white;
-   
-}
+    width:100%;
+}  
+
 .navigation{
     background-color:transparent;
 }
@@ -22,6 +23,10 @@
     overflow:hidden;
 }
 
+.navlinkcolor{
+    color:gray;
+}
+
 footer{
     background-color:#525252;
     
@@ -29,21 +34,16 @@ footer{
 
 
 .menu{
-    font-family: 'Sacramento', cursive;
+    font-family: 'Merienda', cursive;
     font-size:18;
     font-weight:bold;
     color:#524252;
 }
+
+/*------------ LANDING PAGE ------------*/
 .viewportfolio{
     color:white;
     font-family: 'Sacramento',cursive;
-}
-.navlinkcolor{
-    color:gray;
-}
-
-.portfoliolink{
-    color:white;
 }
 
 
@@ -51,29 +51,30 @@ footer{
     background: rgba(226, 201, 168,0.3);
     margin-top:0.65px;
     margin-bottom:0px;
-    padding:50px;
+    text-align:center;
+    
 }
+
 
 .landingpageaboutme {
     font-family: 'Sacramento', cursive;
     
 }
-.landing-quote{
-    text-align: center;
-    
-}
-.parent-container{
-    display:flex;
-}
+
+
 .about-me-photo{
     
     background-size:contain;
     background-repeat:no-repeat;
-    width:100vw;
     background-position:50% 50%;
-    display:block;
+
     
 }
+
+.parent-container-aboutme{
+    width:98vw;
+}
+/*------------ ABOUTME PAGE ------------*/
 
 .aboutmeheader{
     margin-top:100px;
@@ -85,11 +86,21 @@ footer{
     background-color: rgba(202, 169, 125,0.3);
     border:none;
     padding-bottom: 50px;
+    width:99.8vw;
     
 }
 .aboutmepicture{
-    margin-left:150px;
+    padding-top:5%;
+    text-align:center;
+    height:100;
+    width:100;
+    background-color: rgba(202, 169, 125,0.3);
 }
+.aboutmetext{
+    margin-top:5%;
+    text-align:center;
+}
+/*------------ PORTFOLIO PAGE ------------*/
 
 .portfolioheader{
     margin-top:100px;
@@ -98,6 +109,7 @@ footer{
     font-family: 'Sacramento',cursive;
 }
 
+/*------------ CONTACT PAGE ------------*/
 .contactheader{
     margin-top:100px;
     text-align: center;
@@ -109,6 +121,7 @@ footer{
     background-color: rgba(202, 169, 125,0.3);
 }
 
+/*------------ animations from Animista ------------*/
 /* ----------------------------------------------
  * Generated by Animista on 2019-6-6 20:46:16
  * w: http://animista.net, t: @cssanimista
@@ -153,50 +166,8 @@ footer{
  * w: http://animista.net, t: @cssanimista
  * ---------------------------------------------- */
 
-/**
- * ----------------------------------------
- * animation roll-in-left
- * ----------------------------------------
- */
-@-webkit-keyframes roll-in-left {
-  0% {
-    -webkit-transform: translateX(-800px) rotate(-540deg);
-            transform: translateX(-800px) rotate(-540deg);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: translateX(0) rotate(0deg);
-            transform: translateX(0) rotate(0deg);
-    opacity: 1;
-  }
-}
-@keyframes roll-in-left {
-  0% {
-    -webkit-transform: translateX(-800px) rotate(-540deg);
-            transform: translateX(-800px) rotate(-540deg);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: translateX(0) rotate(0deg);
-            transform: translateX(0) rotate(0deg);
-    opacity: 1;
-  }
-}
-.roll-in-left {
-	-webkit-animation: roll-in-left 0.6s ease-out both;
-	        animation: roll-in-left 0.6s ease-out both;
-}
 
-/* ----------------------------------------------
- * Generated by Animista on 2019-6-6 20:53:44
- * w: http://animista.net, t: @cssanimista
- * ---------------------------------------------- */
 
-/**
- * ----------------------------------------
- * animation fade-in-fwd
- * ----------------------------------------
- */
 @-webkit-keyframes fade-in-fwd {
   0% {
     -webkit-transform: translateZ(-80px);
@@ -225,3 +196,4 @@ footer{
 	-webkit-animation: fade-in-fwd 8s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 	        animation: fade-in-fwd 8s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
+
